--- a/package.json
+++ b/package.json
@@ -3,14 +3,18 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engint": {
+	"node": "16.x"
+  },
   "scripts": {
-	"start": "node dist",
+    "start": "node dist",
     "build": "tsc",
     "dev": "nodemon src/index.ts"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.7",
     "nodemon": "^2.0.22",
@@ -18,6 +22,7 @@
     "typescript": "^5.1.3"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "mongoose": "^7.3.0",
     "multer": "^1.4.5-lts.1"
