--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "18.x"
+  },
   "scripts": {
     "start": "node dist",
     "build": "tsc",
     "dev": "nodemon src/index.ts"
   },
-  "author": "",
+  "author": "Everton Lino",
   "license": "ISC",
   "devDependencies": {
     "@types/cors": "^2.8.13",
